créé script de génération du cv html et pdf

--- a/cv/cv.html
+++ b/cv/cv.html
@@ -81,6 +81,145 @@ Project Management</p>
 assignments in the context of express deliveries</li>
 </ul>
 
+<h2 id="publications">Publications</h2>
+
+<h3 id="non-peer-reviewed-journals">Non Peer-Reviewed Journals</h3>
+
+<p><code class="highlighter-rouge">2020</code></p>
+
+<ul>
+  <li>Françoise Barbier-Chassaing, Élise Berlinski, Alexandre Ganachaud,
+<strong>Arthur Gaudron</strong> &amp; Lorraine Paquin</li>
+  <li><a href="https://hal.archives-ouvertes.fr/hal-02532622">Le procès du ranking social - Conclusions pour M Vigi</a></li>
+  <li><strong>Dalloz IP/IT</strong>, Dalloz, 2020</li>
+</ul>
+
+<p><code class="highlighter-rouge">2019</code></p>
+<ul>
+  <li><strong>Arthur Gaudron</strong></li>
+  <li><a href="https://hal.archives-ouvertes.fr/hal-02055595">Trial of an AI: Empowering people to explore law and science challenges</a></li>
+  <li><strong>IFIM’s International Journal on Law &amp; Regulation of Artificial Intelligence &amp; Robotics</strong>, 2019, 1</li>
+</ul>
+
+<p><code class="highlighter-rouge">2018</code></p>
+
+<ul>
+  <li>Françoise Barbier-Chassaing, Jean-Baptiste Crabières &amp; <strong>Arthur Gaudron</strong></li>
+  <li><a href="https://hal.archives-ouvertes.fr/hal-02532622">Le procès de l’intelligence artificielle et de la voiture autonome — Conclusions aux fins de relaxe</a></li>
+  <li><strong>Dalloz IP/IT</strong>, Dalloz, 2018</li>
+</ul>
+
+<h3 id="peer-reviewed-conferences">Peer-Reviewed Conferences</h3>
+
+<p><code class="highlighter-rouge">2019</code>
+<strong>Arthur Gaudron</strong>, Simon Tamayo &amp; Arnaud de la Fortelle</p>
+<ul>
+  <li><a href="https://hal/archives-ouvertes/fr/hal-02532774">Interactive Simulation For Collective Decision Making In City Logistics</a></li>
+  <li><strong>11th International Conference on City Logistics</strong>, Jun 2019, Dubrovnik, Croatia</li>
+</ul>
+
+<p><code class="highlighter-rouge">2019</code>
+Simon Tamayo, François Combes &amp; <strong>Arthur Gaudron</strong></p>
+<ul>
+  <li><a href="https://hal.archives-ouvertes.fr/hal-02156076">Unsupervised machine learning to analyse city logistics through Twitter</a></li>
+  <li><strong>11th International Conference on City Logistics</strong>, Jun 2019, Dubrovnik, Croatia</li>
+</ul>
+
+<p><code class="highlighter-rouge">2019</code>
+Raphael Benoit, Corine Gunot, Simon Tamayo, <strong>Arthur Gaudron</strong> &amp; Frédéric Fontane</p>
+<ul>
+  <li><a href="https://hal.archives-ouvertes.fr/hal-02144605">Food open-air markets in Paris: transportation environmental issues</a></li>
+  <li><strong>World Conference on Transport Research</strong>, May 2019, Mumbai, India</li>
+</ul>
+
+<p><code class="highlighter-rouge">2018</code>
+<strong>Arthur Gaudron</strong>, Simon Tamayo &amp; Arnaud de la Fortelle</p>
+<ul>
+  <li><a href="https://hal.archives-ouvertes.fr/hal-01981853">Interactive Simulation To Explore Urban Distribution Schemes</a></li>
+  <li><strong>21st EURO Working Group on Transportation Meeting</strong>, Sep 2018, Braunschweig, Germany</li>
+</ul>
+
+<p><code class="highlighter-rouge">2018</code>
+Apollinaire Barme, Simon Tamayo &amp; <strong>Arthur Gaudron</strong></p>
+<ul>
+  <li><a href="https://hal.archives-ouvertes.fr/hal-01790991">Statistic regression and open data approach for identifying economic indicators that influence e-commerce</a></li>
+  <li><strong>20th International Conference on Urban Transportation and City Logistics</strong>, May 2018, London, United Kingdom</li>
+</ul>
+
+<p><code class="highlighter-rouge">2018</code>
+<strong>Arthur Gaudron</strong>, Simon Tamayo &amp; Arnaud de la Fortelle</p>
+<ul>
+  <li><a href="https://hal.archives-ouvertes.fr/hal-01980261">Simulation de l’utilisation des aires de livraisons en ville par la méthode de Monte-Carlo</a></li>
+  <li><strong>ATEC - Les rencontres de la mobilité intelligente 2018</strong>, Jan 2018, Paris, France</li>
+</ul>
+
+<p><code class="highlighter-rouge">2017</code>
+Simon Tamayo, <strong>Arthur Gaudron</strong> &amp; Arnaud de la Fortelle</p>
+<ul>
+  <li><a href="https://hal.archives-ouvertes.fr/hal-01541501">Loading/unloading spaces location and evaluation: an approach through real data</a></li>
+  <li><strong>10th International Conference on City Logistics</strong>, Institute for City Logistics, Jun 2017, Phuket, Thailand</li>
+</ul>
+
+<p><code class="highlighter-rouge">2017</code>
+Sarra Jlassi, Simon Tamayo &amp; <strong>Arthur Gaudron</strong></p>
+<ul>
+  <li><a href="https://hal.archives-ouvertes.fr/hal-01571510">Simulation applied to urban logistics: a state of the art</a></li>
+  <li><strong>10th International Conference on City Logistics</strong>, Institute for City Logistics, Jun 2017, Phuket, Thailand</li>
+</ul>
+
+<p><code class="highlighter-rouge">2017</code>
+Sarra Jlassi, Simon Tamayo, <strong>Arthur Gaudron</strong> &amp; Arnaud de la Fortelle</p>
+<ul>
+  <li><a href="https://hal.archives-ouvertes.fr/hal-01541501/">Simulating impacts of regulatory policies on urban freight: application to the catering setting</a></li>
+  <li><strong>6th International Conference on Advanced Logistics and Transport</strong>, IEEE, Jul 2017, Bali, Indonesia</li>
+</ul>
+
+<h3 id="non-peer-reviewed-conferences">Non Peer-Reviewed Conferences</h3>
+
+<p><code class="highlighter-rouge">Oct 2019</code>
+“Collaboration in city logistics using interactive simulation”</p>
+<ul>
+  <li><strong>8th METRANS International Urban Freight Conference</strong>, 17th Oct 2019, Long Beach, USA</li>
+</ul>
+
+<p><code class="highlighter-rouge">Oct 2019</code>
+“Classifying logistic vehicles in cities using Deep learning”</p>
+<ul>
+  <li><strong>8th METRANS International Urban Freight Conference</strong>, 17th Oct 2019, Long Beach, USA</li>
+</ul>
+
+<p><code class="highlighter-rouge">Feb 2019</code>
+The Future of Digital Intelligence – Ethics, Impact and Prudence</p>
+<ul>
+  <li><strong>IFIM Business School</strong> and <strong>IFIM Law School</strong>, 26th February 2019, Bangalore, India</li>
+</ul>
+
+<p><code class="highlighter-rouge">Feb 2019</code>
+Law &amp; Regulation of AI: A Global Perspective
+AD IDEM 2019 International Law Conference</p>
+<ul>
+  <li><strong>IFIM Law School</strong>, 25th February 2019, Bangalore, India</li>
+</ul>
+
+<p><code class="highlighter-rouge">Feb 2018</code>
+Les données, base d’apprentissage de l’intelligence artificielle
+Cycle de conférences “Quelle régulation pour l’intelligence artificielle ?”</p>
+<ul>
+  <li><strong>Université Paris Descartes</strong>, 8th February 2018, Paris, France</li>
+</ul>
+
+<p><code class="highlighter-rouge">Oct 2017</code>
+Mobile multi-depot vehicle routing problem</p>
+<ul>
+  <li><strong>7th METRANS International Urban Freight Conference</strong>, Oct 2017, Long Beach, USA</li>
+</ul>
+
+<p><code class="highlighter-rouge">Feb 2017</code>
+Loading/Unloading Spaces Location And Evaluation</p>
+<ul>
+  <li><strong>EURO Winter Institute on “Methods and Models in Transportation Problems”</strong>, 14-23 Feb 2017, Bressanone, Italy</li>
+</ul>
+
 <h2 id="teaching-activities">Teaching activities</h2>
 <p><code class="highlighter-rouge">2020 – now</code>
 <strong>MINES ParisTech</strong></p>
@@ -173,18 +312,6 @@ Workshop on City logistics</p>
   <li><strong>MINES ParisTech</strong>, 8th November 2019, Paris, France</li>
 </ul>
 
-<p><code class="highlighter-rouge">Oct 2019</code>
-“Collaboration in city logistics using interactive simulation”</p>
-<ul>
-  <li><strong>8th METRANS International Urban Freight Conference</strong>, 17th Oct 2019, Long Beach, USA</li>
-</ul>
-
-<p><code class="highlighter-rouge">Oct 2019</code>
-“Classifying logistic vehicles in cities using Deep learning”</p>
-<ul>
-  <li><strong>8th METRANS International Urban Freight Conference</strong>, 17th Oct 2019, Long Beach, USA</li>
-</ul>
-
 <p><code class="highlighter-rouge">March 2019</code>
 “IA et Responsabilités” – Séminaire à destination des Instances
 Représentatives du Personnel</p>
@@ -198,141 +325,16 @@ Finale PSL de l’édition 2019 de Ma Thèse en 180 secondes</p>
   <li><strong>PSL University</strong>, 7th March 2019, Paris, France</li>
 </ul>
 
-<p><code class="highlighter-rouge">Feb 2019</code>
-The Future of Digital Intelligence – Ethics, Impact and Prudence</p>
-<ul>
-  <li><strong>IFIM Business School</strong> and <strong>IFIM Law School</strong>, 26th February 2019, Bangalore, India</li>
-</ul>
-
-<p><code class="highlighter-rouge">Feb 2019</code>
-Law &amp; Regulation of AI: A Global Perspective
-AD IDEM 2019 International Law Conference</p>
-<ul>
-  <li><strong>IFIM Law School</strong>, 25th February 2019, Bangalore, India</li>
-</ul>
-
-<p><code class="highlighter-rouge">Feb 2018</code>
-Les données, base d’apprentissage de l’intelligence artificielle
-Cycle de conférences “Quelle régulation pour l’intelligence artificielle ?”</p>
-<ul>
-  <li><strong>Université Paris Descartes</strong>, 8th February 2018, Paris, France</li>
-</ul>
-
 <p><code class="highlighter-rouge">Oct 2018</code>
 “Le procès de l’intelligence artificielle et de la voiture autonome”</p>
 <ul>
   <li><strong>Court of Appeal of Paris</strong>, 5th October 2018, Paris, France</li>
 </ul>
 
-<p><code class="highlighter-rouge">Oct 2017</code>
-Mobile multi-depot vehicle routing problem</p>
-<ul>
-  <li><strong>7th METRANS International Urban Freight Conference</strong>, Oct 2017, Long Beach, USA</li>
-</ul>
-
-<p><code class="highlighter-rouge">Feb 2017</code>
-Loading/Unloading Spaces Location And Evaluation</p>
-<ul>
-  <li><strong>EURO Winter Institute on “Methods and Models in Transportation Problems”</strong>, 14-23 Feb 2017, Bressanone, Italy</li>
-</ul>
-
 <p><code class="highlighter-rouge">Feb 2017</code>
 Bionumeric City — International Workshop</p>
 <ul>
   <li><strong>Cité des Sciences et de l’Industrie</strong>, 9th February 2017, Paris, France</li>
-</ul>
-
-<h2 id="publications">Publications</h2>
-
-<h3 id="journals">Journals</h3>
-
-<p><code class="highlighter-rouge">2020</code></p>
-
-<ul>
-  <li>Françoise Barbier-Chassaing, Élise Berlinski, Alexandre Ganachaud,
-<strong>Arthur Gaudron</strong> &amp; Lorraine Paquin</li>
-  <li><a href="https://hal.archives-ouvertes.fr/hal-02532622">Le procès du ranking social - Conclusions pour M Vigi</a></li>
-  <li><strong>Dalloz IP/IT</strong>, Dalloz, 2020</li>
-</ul>
-
-<p><code class="highlighter-rouge">2019</code></p>
-<ul>
-  <li><strong>Arthur Gaudron</strong></li>
-  <li><a href="https://hal.archives-ouvertes.fr/hal-02055595">Trial of an AI: Empowering people to explore law and science challenges</a></li>
-  <li><strong>IFIM’s International Journal on Law &amp; Regulation of Artificial Intelligence &amp; Robotics</strong>, 2019, 1</li>
-</ul>
-
-<p><code class="highlighter-rouge">2018</code></p>
-
-<ul>
-  <li>Françoise Barbier-Chassaing, Jean-Baptiste Crabières &amp; <strong>Arthur Gaudron</strong></li>
-  <li><a href="https://hal.archives-ouvertes.fr/hal-02532622">Le procès de l’intelligence artificielle et de la voiture autonome — Conclusions aux fins de relaxe</a></li>
-  <li><strong>Dalloz IP/IT</strong>, Dalloz, 2018</li>
-</ul>
-
-<h3 id="conference">Conference</h3>
-
-<p><code class="highlighter-rouge">2019</code>
-<strong>Arthur Gaudron</strong>, Simon Tamayo &amp; Arnaud de la Fortelle</p>
-<ul>
-  <li><a href="https://hal/archives-ouvertes/fr/hal-02532774">Interactive Simulation For Collective Decision Making In City Logistics</a></li>
-  <li><strong>11th International Conference on City Logistics</strong>, Jun 2019, Dubrovnik, Croatia</li>
-</ul>
-
-<p><code class="highlighter-rouge">2019</code>
-Simon Tamayo, François Combes &amp; <strong>Arthur Gaudron</strong></p>
-<ul>
-  <li><a href="https://hal.archives-ouvertes.fr/hal-02156076">Unsupervised machine learning to analyse city logistics through Twitter</a></li>
-  <li><strong>11th International Conference on City Logistics</strong>, Jun 2019, Dubrovnik, Croatia</li>
-</ul>
-
-<p><code class="highlighter-rouge">2019</code>
-Raphael Benoit, Corine Gunot, Simon Tamayo, <strong>Arthur Gaudron</strong> &amp; Frédéric Fontane</p>
-<ul>
-  <li><a href="https://hal.archives-ouvertes.fr/hal-02144605">Food open-air markets in Paris: transportation environmental issues</a></li>
-  <li><strong>World Conference on Transport Research</strong>, May 2019, Mumbai, India</li>
-</ul>
-
-<p><code class="highlighter-rouge">2018</code>
-<strong>Arthur Gaudron</strong>, Simon Tamayo &amp; Arnaud de la Fortelle</p>
-<ul>
-  <li><a href="https://hal.archives-ouvertes.fr/hal-01981853">Interactive Simulation To Explore Urban Distribution Schemes</a></li>
-  <li><strong>21st EURO Working Group on Transportation Meeting</strong>, Sep 2018, Braunschweig, Germany</li>
-</ul>
-
-<p><code class="highlighter-rouge">2018</code>
-Apollinaire Barme, Simon Tamayo &amp; <strong>Arthur Gaudron</strong></p>
-<ul>
-  <li><a href="https://hal.archives-ouvertes.fr/hal-01790991">Statistic regression and open data approach for identifying economic indicators that influence e-commerce</a></li>
-  <li><strong>20th International Conference on Urban Transportation and City Logistics</strong>, May 2018, London, United Kingdom</li>
-</ul>
-
-<p><code class="highlighter-rouge">2018</code>
-<strong>Arthur Gaudron</strong>, Simon Tamayo &amp; Arnaud de la Fortelle</p>
-<ul>
-  <li><a href="https://hal.archives-ouvertes.fr/hal-01980261">Simulation de l’utilisation des aires de livraisons en ville par la méthode de Monte-Carlo</a></li>
-  <li><strong>ATEC - Les rencontres de la mobilité intelligente 2018</strong>, Jan 2018, Paris, France</li>
-</ul>
-
-<p><code class="highlighter-rouge">2017</code>
-Simon Tamayo, <strong>Arthur Gaudron</strong> &amp; Arnaud de la Fortelle</p>
-<ul>
-  <li><a href="https://hal.archives-ouvertes.fr/hal-01541501">Loading/unloading spaces location and evaluation: an approach through real data</a></li>
-  <li><strong>10th International Conference on City Logistics</strong>, Institute for City Logistics, Jun 2017, Phuket, Thailand</li>
-</ul>
-
-<p><code class="highlighter-rouge">2017</code>
-Sarra Jlassi, Simon Tamayo &amp; <strong>Arthur Gaudron</strong></p>
-<ul>
-  <li><a href="https://hal.archives-ouvertes.fr/hal-01571510">Simulation applied to urban logistics: a state of the art</a></li>
-  <li><strong>10th International Conference on City Logistics</strong>, Institute for City Logistics, Jun 2017, Phuket, Thailand</li>
-</ul>
-
-<p><code class="highlighter-rouge">2017</code>
-Sarra Jlassi, Simon Tamayo, <strong>Arthur Gaudron</strong> &amp; Arnaud de la Fortelle</p>
-<ul>
-  <li><a href="https://hal.archives-ouvertes.fr/hal-01541501/">Simulating impacts of regulatory policies on urban freight: application to the catering setting</a></li>
-  <li><strong>6th International Conference on Advanced Logistics and Transport</strong>, IEEE, Jul 2017, Bali, Indonesia</li>
 </ul>
 
 <!-- ### Footer
