--- a/cv/cv.html
+++ b/cv/cv.html
@@ -221,12 +221,10 @@ Loading/Unloading Spaces Location And Evaluation</p>
 </ul>
 
 <h2 id="teaching-activities">Teaching activities</h2>
-<p><code class="highlighter-rouge">2020 – now</code>
-<strong>MINES ParisTech</strong></p>
+<!--`2020 – now`
+__MINES ParisTech__
 
-<ul>
-  <li>Option Système de production et logistique — …</li>
-</ul>
+- Option Système de production et logistique — …-->
 
 <p><code class="highlighter-rouge">2020 - now</code>
 <strong>MINES ParisTech</strong></p>
