--- a/pages/misc/drones-emerging-tech.html
+++ b/pages/misc/drones-emerging-tech.html
@@ -18,7 +18,7 @@
     ul.task-list{list-style: none;}
     .display.math{display: block; text-align: center; margin: 0.5rem auto;}
   </style>
-  <link rel="stylesheet" href="https://unpkg.com/reveal.js@^4//dist/theme/black.css" id="theme">
+  <link rel="stylesheet" href="https://unpkg.com/reveal.js@^4//dist/theme/white.css" id="theme">
 </head>
 <body>
   <div class="reveal">
@@ -105,6 +105,10 @@
 <h2>#1 Fit with economic and strategic factors</h2>
 <p>The business case for drones remains unclear compared with traditional investment options such as forklifts, mounted cameras, and material handling systems.</p>
 </section>
+<section id="the-productivity-j-curve-for-gpt" class="slide level2">
+<h2>The Productivity J-Curve for GPT</h2>
+<p>Brynjolfsson, Erik, Daniel Rock, et Chad Syverson. « The Productivity J-Curve: How Intangibles Complement General Purpose Technologies ». American Economic Journal: Macroeconomics 13, nᵒ 1 (janvier 2021): 333‑72. https://doi.org/10.1257/mac.20180386.</p>
+</section>
 <section id="fit-with-operational-and-supply-chain-factors" class="slide level2">
 <h2>#2 Fit with operational and supply chain factors</h2>
 <p>Market pull versus technology push (Mowery &amp; Rosenberg, 1979; Nemet, 2009)</p>
@@ -129,9 +133,10 @@
 <p>Creates risks</p>
 <p>Negative opinion about the tech</p>
 </section>
-<section id="the-productivity-j-curve-for-gpt" class="slide level2">
-<h2>The Productivity J-Curve for GPT</h2>
-<p>Brynjolfsson, Erik, Daniel Rock, et Chad Syverson. « The Productivity J-Curve: How Intangibles Complement General Purpose Technologies ». American Economic Journal: Macroeconomics 13, nᵒ 1 (janvier 2021): 333‑72. https://doi.org/10.1257/mac.20180386.</p>
+<section id="problematic" class="slide level2">
+<h2>Problematic</h2>
+<p>Drones do not appear to have favorable starting conditions for achieving a fit with any of the three factors.</p>
+<p>Why then do companies continue to explore and pilot drones in their operations, and how do companies move from early ideas to matured applications?</p>
 </section></section>
     </div>
   </div>
